Sodexo Peru/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Cliente</fullName>
        <description>Tipo de registro que especifica oportunidades para el tipo de registro Cliente</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2ENuevo</fullName>
        </values>
        <values>
            <fullName>2%2EDescubrimiento</fullName>
        </values>
        <values>
            <fullName>3%2ENegociación</fullName>
        </values>
        <values>
            <fullName>4%2EOferta Aceptada</fullName>
        </values>
        <values>
            <fullName>5%2EClosed won</fullName>
        </values>
        <values>
            <fullName>6%2ECerrada Pérdida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchant</fullName>
        <description>Tipo de registro que especifica oportunidades para el tipo de registro Merchant</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2ENuevo</fullName>
        </values>
        <values>
            <fullName>2%2EDescubrimiento</fullName>
        </values>
        <values>
            <fullName>3%2ENegociación</fullName>
        </values>
        <values>
            <fullName>4%2EOferta Aceptada</fullName>
        </values>
        <values>
            <fullName>5%2EClosed won</fullName>
        </values>
        <values>
            <fullName>6%2ECerrada Pérdida</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BV_Anual__c</fullName>
        <formula>Amount *  N_Compras_al_A_o__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>BV Mensual por la cantidad de compras anuales.</inlineHelpText>
        <label>BV Anual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_Pedidos__c</fullName>
        <label>Cantidad de Pedidos al Año</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Pedidos__c</fullName>
        <label>Email Pedidos</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Frecuencia__c</fullName>
        <label>Frecuencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Frecuencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frecuencia_f__c</fullName>
        <description>1= oneShot, 2 a 7 no recurrente, sobre 7 es recurrente</description>
        <formula>IF( N_Compras_al_A_o__c = 1, &apos;OneShot&apos;,  IF(N_Compras_al_A_o__c &gt; 7, &apos;Recurrente&apos;, &apos;NoRecurrente&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Define el tipo de Frecuencia en base al numero de compras al año.</inlineHelpText>
        <label>Frecuencia (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interlocutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interlocutor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Motivo Pérdida</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Precio</fullName>
                </value>
                <value>
                    <fullName>Interés</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Presupuesto</fullName>
                </value>
                <value>
                    <fullName>Valor Agregado</fullName>
                </value>
                <value>
                    <fullName>Política Sodexo</fullName>
                </value>
                <value>
                    <fullName>Corbertura</fullName>
                </value>
                <value>
                    <fullName>Cliente Anula GC o Licitación</fullName>
                </value>
                <value>
                    <fullName>Bases no cumplen con el Convenio Marco</fullName>
                </value>
                <value>
                    <fullName>Sin Efecto</fullName>
                </value>
                <value>
                    <fullName>Inactividad</fullName>
                </value>
                <value>
                    <fullName>Condiciones Contrato</fullName>
                </value>
                <value>
                    <fullName>Comisión</fullName>
                </value>
                <value>
                    <fullName>Fecha de pago</fullName>
                </value>
                <value>
                    <fullName>Falta de documentación</fullName>
                </value>
                <value>
                    <fullName>Desacuerdo con el sistema</fullName>
                </value>
                <value>
                    <fullName>Desinterés</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_Compras_al_A_o__c</fullName>
        <label>Nº Compras al Año</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDX_BudgetMensualEstimado__c</fullName>
        <label>xxBV Mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDX_Budget_mesual_real__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.SDX_Total_carga__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget mesual real</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDX_BusinessValue__c</fullName>
        <label>Business Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDX_Canal__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_CotizacionAceptada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cotización Aceptada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDX_CotizacionPresentada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cotización Presentada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDX_Medio__c</fullName>
        <label>Medio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>CCL</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>Excliente Sodexo</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Perú Pymes</fullName>
                </value>
                <value>
                    <fullName>Perú Top</fullName>
                </value>
                <value>
                    <fullName>Propia</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Teléfono</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Exafiliado Sodexo</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Medios_de_pago__c</fullName>
        <label>Medios de pago</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tarjetas físicas</fullName>
                </value>
                <value>
                    <fullName>Tarjetas virtuales</fullName>
                </value>
                <value>
                    <fullName>Vales físicos</fullName>
                </value>
                <value>
                    <fullName>Vales virtuales</fullName>
                </value>
                <value>
                    <fullName>Izzipay</fullName>
                </value>
                <value>
                    <fullName>Niubiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_NombreComercial__c</fullName>
        <label>Nombre comercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Nombre_Competencia__c</fullName>
        <label>Nombre Competencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Segmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOOD</fullName>
                </value>
                <value>
                    <fullName>MEAL</fullName>
                </value>
                <value>
                    <fullName>GIFT</fullName>
                </value>
                <value>
                    <fullName>EXTERNAL ESTIMULATION</fullName>
                </value>
                <value>
                    <fullName>FUEL &amp; FLEET</fullName>
                </value>
                <value>
                    <fullName>EDUCATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Servicio__c</fullName>
        <label>Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tarjeta</fullName>
                </value>
                <value>
                    <fullName>Vale</fullName>
                </value>
                <value>
                    <fullName>e-Vale</fullName>
                </value>
                <value>
                    <fullName>e-Commerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las oportunidades</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>SDX_Canal__c</columns>
        <columns>SDX_Segmento__c</columns>
        <columns>SDX_Servicio__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Nuevos de esta semana</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Cliente</fullName>
        <active>true</active>
        <businessProcess>Cliente</businessProcess>
        <description>Tipo de registro para proceso comercial de Cliente</description>
        <label>Cliente</label>
    </recordTypes>
    <recordTypes>
        <fullName>Merchant</fullName>
        <active>true</active>
        <businessProcess>Merchant</businessProcess>
        <description>Tipo de registro para proceso comercial de Merchant</description>
        <label>Merchant</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>OPP001_MotivoPerdida</fullName>
        <active>true</active>
        <description>OPP001_Motivo Pérdida Obligatorio, Valida si la oportunidad pasa a etapa Perdida entonces deberá diligenciar el motivo de perdida</description>
        <errorConditionFormula>AND(
TEXT(StageName)=&quot;Cerrada Pérdida&quot;,
ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
        <errorDisplayField>Loss_Reason__c</errorDisplayField>
        <errorMessage>OPP001: Debe diligenciar el motivo de perdida de la oportunidad</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP004_CerradaGanada</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;5.Closed won&quot;),
TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c) &lt;&gt; &quot;Accepted&quot;
)</errorConditionFormula>
        <errorDisplayField>SBQQ__PrimaryQuote__c</errorDisplayField>
        <errorMessage>OPP004: La Oportunidad  &quot;Cerrada Ganada&quot; debe tener un primary Quote Aceptado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP005_ValidaCreacionNuevo</fullName>
        <active>true</active>
        <description>Valida la creación de Oportunidades en Etapa Nuevo.</description>
        <errorConditionFormula>ISNEW() &amp;&amp;
NOT(ISPICKVAL(StageName, &quot;1.Nuevo&quot;))</errorConditionFormula>
        <errorMessage>OPP005:No puedes crear una Oportunidad en una etapa diferente a Nuevo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP006M_NombreComercialObligatorio</fullName>
        <active>false</active>
        <description>Valida que el campo nombre comercial este diligenciado cuando pase a la etapa Aceptación</description>
        <errorConditionFormula>AND(
TEXT(StageName)=&apos;4.Oferta Aceptada&apos;,
ISBLANK((SDX_NombreComercial__c)),
RecordType.Name = &apos;Merchant&apos;
)</errorConditionFormula>
        <errorDisplayField>SDX_NombreComercial__c</errorDisplayField>
        <errorMessage>OPP006: Debe diligenciar el nombre comercial o nombres comerciales</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP007M_ValidacionNegociacionSoloDescub</fullName>
        <active>false</active>
        <description>Validará que solo se pueda pasar a la etapa Negociación si es que el anterior estado fue Negociación.</description>
        <errorConditionFormula>AND(
				ISCHANGED(StageName),
    TEXT(PRIORVALUE(StageName)) &lt;&gt; &apos;2.Descubrimiento&apos;,
    TEXT(StageName)= &apos;3.Negociación&apos;,
				$RecordType.Name=&apos;Merchant&apos;,
    NOT(
        OR(
            $Profile.Name= &apos;Marketing&apos;
        
								)
    )
)</errorConditionFormula>
        <errorMessage>OPP007 : A la etapa &apos;Negociación&apos; podrá ser actualizada manualmente solo si la etapa anterior es &apos;Descubrimiento&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP007_ValidacionNegociacionSoloDescub</fullName>
        <active>true</active>
        <description>Validará que solo se pueda pasar a la etapa Negociación si es que el anterior estado fue Negociación.</description>
        <errorConditionFormula>AND(
				ISCHANGED(StageName),
    TEXT(PRIORVALUE(StageName)) &lt;&gt; &apos;2.Descubrimiento&apos;,
    TEXT(StageName)= &apos;3.Negociación&apos;,
    NOT(
        OR(
            $Profile.Name= &apos;Marketing&apos;
        
			 				)
    )
)</errorConditionFormula>
        <errorMessage>OPP007 : A la etapa &apos;Negociación&apos; podrá ser actualizada manualmente solo si la etapa anterior es &apos;Descubrimiento&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP008M_SoloAceptacionDesdeNegociacion</fullName>
        <active>false</active>
        <description>Validará que solo se pueda pasar a la etapa Aceptación si es que el anterior estado fue Negociación.</description>
        <errorConditionFormula>AND(
ISCHANGED(StageName),
TEXT(PRIORVALUE(StageName)) &lt;&gt; &apos;3.Negociación&apos;,
TEXT(StageName)= &apos;4.Oferta Aceptada&apos;,
$RecordType.Name = &apos;Merchant&apos;,
NOT(
OR(
$Profile.Name= &apos;Marketing&apos;
)
)
)</errorConditionFormula>
        <errorMessage>OPP008 : A la etapa &apos;4.Oferta Aceptada&apos; podrá ser actualizada manualmente solo si la etapa anterior es &apos;3.Negociación&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP008_SoloAceptacionDesdeNegociacion</fullName>
        <active>true</active>
        <description>Validará que solo se pueda pasar a la etapa Aceptación si es que el anterior estado fue Negociación.</description>
        <errorConditionFormula>AND(
ISCHANGED(StageName),
TEXT(PRIORVALUE(StageName)) &lt;&gt; &apos;3.Negociación&apos;,
TEXT(StageName)= &apos;4.Oferta Aceptada&apos;,
NOT(
OR(
$Profile.Name= &apos;Marketing&apos;
)
)
)</errorConditionFormula>
        <errorMessage>OPP008 : A la etapa &apos;4.Oferta Aceptada&apos; podrá ser actualizada manualmente solo si la etapa anterior es &apos;3.Negociación&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP009_GanadaSoloAceptacion</fullName>
        <active>true</active>
        <description>Validará que solo se pueda pasar a la etapa Ganada si es que el anterior estado fue Aceptación.</description>
        <errorConditionFormula>AND(
ISCHANGED(StageName),
TEXT(PRIORVALUE(StageName)) &lt;&gt; &apos;4.Oferta Aceptada&apos;,
TEXT(StageName)= &apos;5.Closed won&apos;,
NOT(
OR(
$Profile.Name= &apos;Marketing&apos;
)
)
)</errorConditionFormula>
        <errorMessage>OPP009 : A la etapa &apos;5.-Cerrada Ganada&apos; podrá ser actualizada manualmente solo si la etapa anterior es &apos;4.Oferta Aceptada&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP010_GanadaNoModificacion</fullName>
        <active>true</active>
        <description>Validación para que una vez ganada la oportunidad ya no se modifique.</description>
        <errorConditionFormula>AND(
TEXT(PRIORVALUE(StageName))=&apos;5.Closed won&apos;,
NOT(
OR(

$Profile.Name= &apos;Marketing&apos;
)
)
)</errorConditionFormula>
        <errorMessage>OPP010 : No se pueden realizar cambios cuando una oportunidad está en estado Cerrada Ganada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP011_ValidacionEtapasConsecutivas</fullName>
        <active>true</active>
        <description>Validación solo para que el salto de etapas solo sea consecutivo</description>
        <errorConditionFormula>AND(
ISCHANGED(StageName),
OR(
AND(
TEXT(PRIORVALUE(StageName))=&apos;1.Nuevo&apos;,
TEXT(StageName) = &apos;3.Negociación&apos;
),
AND(
TEXT(PRIORVALUE(StageName))=&apos;1.Nuevo&apos;,
TEXT(StageName) = &apos;4.Oferta Aceptada&apos;
),
AND(
TEXT(PRIORVALUE(StageName))=&apos;1.Nuevo&apos;,
TEXT(StageName) = &apos;5.Closed won&apos;
),
AND(
TEXT(PRIORVALUE(StageName))=&apos;2.Descubrimiento&apos;,
TEXT(StageName) = &apos;4.Oferta Aceptada&apos;
),
AND(
TEXT(PRIORVALUE(StageName))=&apos;2.Descubrimiento&apos;,
TEXT(StageName) = &apos;5.Closed won&apos;
),
AND(
TEXT(PRIORVALUE(StageName))=&apos;3.Negociación&apos;,
TEXT(StageName) = &apos;5.Closed won&apos;
)
),
NOT(
OR(

$Profile.Name= &apos;Marketing&apos;
)
)
)</errorConditionFormula>
        <errorMessage>OPP011 : Sólo se puede pasar de una etapa a otra consecutiva.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP012_ValidacionEtapaNoRetroceso</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(StageName),
OR(
TEXT(StageName) = &apos;1.Nuevo&apos;,
AND(
TEXT(PRIORVALUE(StageName))=&apos;3.Negociación&apos;,
TEXT(StageName) = &apos;2.Descubrimiento&apos;
),
AND(
TEXT(PRIORVALUE(StageName))=&apos;4.Oferta Aceptada&apos;,
TEXT(StageName) = &apos;3.Negociación&apos;
),
AND(
TEXT(PRIORVALUE(StageName))=&apos;4.Oferta Aceptada&apos;,
TEXT(StageName) = &apos;2.Descubrimiento&apos;
),

TEXT(PRIORVALUE(StageName))=&apos;6.Cerrada Pérdida&apos;

),
NOT(
OR(

$Profile.Name= &apos;Marketing&apos;
)
)
)</errorConditionFormula>
        <errorMessage>OPP012 : No puedes retroceder etapas.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP013_ValidacionInterlocutor</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(StageName,&quot;2.Descubrimiento&quot;) &amp;&amp; 
ISBLANK(Interlocutor__c)</errorConditionFormula>
        <errorMessage>OPP013: Para avanzar a la etapa Descubrimiento debes completar el Interlocutor.</errorMessage>
    </validationRules>
</CustomObject>